git-annex (3.20110611) UNRELEASED; urgency=low

  * New repository format, annex.version=3. Use `git annex upgrade` to migrate.
  * git-annex now stores its logs in a git-annex branch.
  * merge: New subcommand. Auto-merges the new git-annex branch.
  * Improved handling of bare git repos with annexes. Many more commands will
    work in them.
  * rsync is now used when copying files from repos on other filesystems.
    cp is still used when copying file from repos on the same filesystem,
    since --reflink=auto can make it significantly faster on filesystems
    such as btrfs.
  * Allow --trust etc to specify a repository by name, for temporarily 
    trusting repositories that are not configured remotes.
  * unlock: Made atomic.
  * git-union-merge: New git subcommand, that does a generic union merge
    operation, and operates efficiently without touching the working tree.

 -- Joey Hess <joeyh@debian.org>  Mon, 13 Jun 2011 19:53:24 -0400

git-annex (0.20110610) unstable; urgency=low

  * Add --numcopies option.
  * Add --trust, --untrust, and --semitrust options.
  * get --from is the same as copy --from
  * Bugfix: Fix fsck to not think all SHAnE keys are bad.

 -- Joey Hess <joeyh@debian.org>  Fri, 10 Jun 2011 11:48:40 -0400

git-annex (0.20110601) unstable; urgency=low

  * Minor bugfixes and error message improvements.
  * Massively sped up `git annex lock` by avoiding use of the uber-slow
    `git reset`, and only running `git checkout` once, even when many files
    are being locked.
  * Fix locking of files with staged changes.
  * Somewhat sped up `git commit` of modifications to unlocked files.
  * Build fix for older ghc.

 -- Joey Hess <joeyh@debian.org>  Wed, 01 Jun 2011 11:50:47 -0400

git-annex (0.20110522) unstable; urgency=low

  * Closer emulation of git's behavior when told to use "foo/.git" as a
    git repository instead of just "foo". Closes: #627563
  * Fix bug in --exclude introduced in 0.20110516.
